feat: Integrate MSW for mock API and service worker
Introduces Mock Service Worker (MSW) to create a simulated API environment using localStorage. This allows for local development and testing of API interactions without a live backend.

Key changes:
- Adds `msw` dependency.
- Configures `index.html` to import MSW and its browser worker.
- Sets up `mocks/browser.ts` and `mocks/handlers.ts` to define mock API endpoints (login, tickets, users, WhatsApp).
- Initializes the MSW worker in `index.tsx` to intercept requests before the application renders.
- Removes legacy mock data from `geminiService.ts`.
- Refactors `App.tsx` and `services/api.ts` to use the new mock API.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0"
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "msw/browser": "https://aistudiocdn.com/msw@^2.5.2/browser",
+    "msw": "https://aistudiocdn.com/msw@^2.5.2",
+    "msw/": "https://esm.sh/msw@^2.12.7/"
   }
 }
 </script>
